samples/_failures_safe/1761476115_9023cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_613ed11c.c: In function ‘main’:
./samples/SAFE/__tmp_613ed11c.c:148:42: error: missing terminating ' character
  148 |                 sentence[sentence_len] = '\0
      |                                          ^~~
./samples/SAFE/__tmp_613ed11c.c:148:17: error: expected expression at end of input
  148 |                 sentence[sentence_len] = '\0
      |                 ^~~~~~~~
./samples/SAFE/__tmp_613ed11c.c:148:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_613ed11c.c:148:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_613ed11c.c:148:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_613ed11c.c:148:17: error: expected declaration or statement at end of input
